--- a/style/_fonts.scss
+++ b/style/_fonts.scss
@@ -1,38 +1,32 @@
-// Font
+/*
+    # Font Familys
+
+    Just the import of the fonts. Nothing more should be declared here.
+*/
+
 @font-face {
-  font-family: 'GT Haptik Regular';
-  font-style: normal;
-  font-weight: normal;
-  src: url(../assets/font/gt-haptik-regular.otf),
-    url(../assets/font/gt-haptik-regular.woff),
-    url(../assets/font/gt-haptik-regular.woff2);
+	font-family: 'GT Haptik Regular';
+	font-style: normal;
+	font-weight: normal;
+	src: url(../assets/font/gt-haptik-regular.otf),
+		url(../assets/font/gt-haptik-regular.woff),
+		url(../assets/font/gt-haptik-regular.woff2);
 }
 
 @font-face {
-  font-family: 'GT Haptik Bold';
-  font-style: normal;
-  font-weight: bold;
-  src: url(../assets/font/gt-haptik-bold.otf),
-    url(../assets/font/gt-haptik-bold.woff),
-    url(../assets/font/gt-haptik-bold.woff2);
+	font-family: 'GT Haptik Bold';
+	font-style: normal;
+	font-weight: bold;
+	src: url(../assets/font/gt-haptik-bold.otf),
+		url(../assets/font/gt-haptik-bold.woff),
+		url(../assets/font/gt-haptik-bold.woff2);
 }
 
 @font-face {
-  font-family: 'GT Haptik Italic';
-  font-style: italic;
-  font-weight: normal;
-  src: url(../assets/font/gt-haptik-regular-oblique.otf),
-    url(../assets/font/gt-haptik-regular-oblique.woff),
-    url(../assets/font/gt-haptik-regular-oblique.woff2);
+	font-family: 'GT Haptik Italic';
+	font-style: italic;
+	font-weight: normal;
+	src: url(../assets/font/gt-haptik-regular-oblique.otf),
+		url(../assets/font/gt-haptik-regular-oblique.woff),
+		url(../assets/font/gt-haptik-regular-oblique.woff2);
 }
-
-$font-size-base: 16px;
-
-$font-size-small: .875rem; // 14px
-$font-size-regular: 1.125rem; // 18px
-$font-size-large: 1.5625rem; // 25px
-$font-size-big: 2.1875rem; // 35px
-
-$font-size-headline-small: 3.125rem; // 50px
-// $font-size-headline-regular: 
-$font-size-headline-large: 8.125rem // 130px
