--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -1,3 +1,9 @@
+/*
+    # Footer Styling
+
+    The styling for the footer.
+*/
+
 footer {
     border-top: $border-weight solid $brand-primary-color;
     background: #fff;
