--- a/style/_links.scss
+++ b/style/_links.scss
@@ -1,3 +1,9 @@
+/*
+    # Styling for general Links
+
+    The theme differs between links that are external, internal, drive-links, portal-links and file-links.
+*/
+
 // Content Links
 main .content,
 nav .sidebar_note {
