--- a/style/_search.scss
+++ b/style/_search.scss
@@ -1,3 +1,9 @@
+/*
+    # Styling for the search-result page
+
+    This styling is for the search result page. Since it got changed several times, the necessity of this file has to be checked.
+*/
+
 .search-results {
     .wrapper {
         .search-result-link {
