--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,3 +1,9 @@
+/*
+    # Variables
+
+    All global variables are declared here.
+*/
+
 // Variables
 $brand-primary-color: #5a00be;
 $brand-secondary-color: #d50e31;
@@ -10,15 +16,17 @@ $base-font: 'GT Haptik',
 sans-serif;
 
 // Font Sizes
-$mobile-h1-font-size: 2.625rem; // Used for top heading
-$mobile-large-font-size: 1.8rem; // Used for navigation, ticker, search-field
-$mobile-medium-font-size: 1.2rem; // Used for sub-menues
-$mobile-paragraph-font-size: 1.6rem; // Used for normal text
+$font-size-base: 16px;
 
-$desktop-h1-font-size: 4.5rem;
-$desktop-large-font-size: 2rem;
-$desktop-medium-font-size: 1.2rem;
-$desktop-paragraph-font-size: 1.6rem;
+$font-size-small: .875rem; // 14px
+$font-size-regular: 1.125rem; // 18px
+$font-size-large: 1.5625rem; // 25px
+$font-size-big: 2.1875rem; // 35px
+
+$font-size-headline-small: 3.125rem; // 50px
+$font-size-headline-regular: 4.375rem; // 70px
+$font-size-headline-big: 6.25rem; // 100px;
+$font-size-headline-large: 8.125rem; // 130px
 
 // Breakpoints
 $breakpoint-tablet: 768px;
@@ -26,20 +34,24 @@ $breakpoint-tablet-landscape: 1024px;
 $breakpoint-laptop: 1345px;
 $breakpoint-screen: 1680px;
 
+// Content-Padding
+$padding_s: 15px;
+
 // Footer
 $footer-height: 60px;
 $footer-icon-size: 40px;
 
 // Ticker
-$ticker-height-s: 40px;
-$ticker-height-m: 40px;
-$ticker-height-l: 40px;
+$ticker-height_s: 40px;
+$ticker-height_m: 50px;
+$ticker-height_l: 65px;
 
 // Language Switch
 $language-menu-rotation: 12deg;
 
 // Sidebar
 $sidebar-width: 320px;
-$search-bar-height: 40px;
 $icon-height: 18px;
+$search-bar-height_m: 40px;
+$search-bar-height_l: 50px;
 $search-form-padding: 5px;
