Added content styling, started category template page, adjusted several stylings

--- a/style/_entry-header.scss
+++ b/style/_entry-header.scss
@@ -10,6 +10,7 @@
     margin-top: 0;
     font-size: $font-size-headline-small;
     text-align: center;
+    font-family: 'GT Haptik Regular', sans-serif;
 }
 
 // Small Headline for child-items
