--- a/style/style.scss
+++ b/style/style.scss
@@ -109,6 +109,12 @@ pre {
     margin-bottom: 1.25em;
 }
 
+.is-style-wide,
+.wrapper main section.is-style-wide {
+    width: 100%;
+    padding: 0;
+}
+
 .entry-content>*:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide),
 .post {
     max-width: 52rem;
